# RAG-Chatbot

./: .gitignore  README.md  main.py  pyproject.toml
chatbot/: app.py  embeddings.py  rag_pipeline.py  streamlit.py
chatbot/vector_store/: index.faiss  index.pkl
data/: data.txt
vector_store/: index.faiss  index.pkl
