[project]
name = "small-business-operations-platform"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "faiss-cpu>=1.13.2",
    "fastapi>=0.135.3",
    "huggingface-hub>=1.10.1",
    "langchain>=1.2.15",
    "python-dotenv>=1.2.2",
    "sentence-transformers>=5.4.0",
    "uvicorn>=0.44.0",
]
